--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -306,6 +306,7 @@
 
 <!-- Toolbar -->
 <div class="toolbar" role="banner">
+  <button class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded">Button</button>
   <img
     width="40"
     alt="Angular Logo"
