--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,6 @@
+<app-spinner></app-spinner>
+<app-header></app-header>
+
 <div class="container">
-  {{ 'title' | translate }}
-<!--  <router-outlet></router-outlet>-->
+  <router-outlet></router-outlet>
 </div>
