- feat: - Movies, actors and companies services created.

--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -1,11 +1,17 @@
 <header class="w-screen flex flex-row justify-between items-center p-4">
-  <div class="hamburger" (click)="openMenu()">
+  <div class="hamburger" *ngIf="!showBack; else arrowBack"
+       (click)="openMenu()">
     <span></span>
     <span></span>
     <span></span>
   </div>
-  <div class="title">
-
+  <ng-template #arrowBack>
+    <div class="arrow-back">
+      <img class="arrow-back__image" src="assets/images/left-arrow.svg" alt="left arrow" />
+    </div>
+  </ng-template>
+  <div class="title text-center">
+    {{ title$ | async }}
   </div>
 
   <!-- sidenav -->
@@ -17,7 +23,7 @@
       <span class="menu__title--close"
             (click)="closeMenu()">&times;</span>
     </p>
-    <ul class="menu__list list-none m-4">
+    <ul class="menu__list list-none mt-4">
       <li class="menu__list--link flex flex-row justify-between items-center"
           [routerLink]="['/movies']" routerLinkActive="link-activated">
         <span class="text">{{ 'header.menu.movies' | translate }}</span>
