--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <app-spinner></app-spinner>
 <app-header></app-header>
 
-<div class="container">
+<div class="container mx-auto">
   <router-outlet></router-outlet>
 </div>
