--- a/src/styles/_main.scss
+++ b/src/styles/_main.scss
@@ -19,3 +19,14 @@ ul {
 a {
   text-decoration: none;
 }
+
+.overlay {
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(74, 74, 74, .8);
+  z-index: 2;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
