--- a/src/app/movies/components/movies-list/components/movie-card/movie-card.component.html
+++ b/src/app/movies/components/movies-list/components/movie-card/movie-card.component.html
@@ -1,20 +1,17 @@
-<article class="card p-3">
+<article class="card p-3" [routerLink]="['/movies/detail', movie.id]">
   <h3 class="card__title flex flex-row justify-start items-center font-extrabold mb-1">
     {{ movie.title }}
   </h3>
-  <a [routerLink]="['/movies/edit', movie.id]" class="card__link">
-    <figure>
-      <img
-        rel="preload"
-        as="image"
-        loading="lazy"
-        [src]="movie.poster"
-        [alt]="movie.title"
-        notImage
-      />
-    </figure>
-  </a>
-
+  <figure>
+    <img
+      rel="preload"
+      as="image"
+      loading="lazy"
+      [src]="movie.poster"
+      [alt]="movie.title"
+      notImage
+    />
+  </figure>
   <div class="card__genres mt-3">
     <span class="card__genres--genre"
           *ngFor="let genre of movie.genre">#{{ genre }}</span>
