--- a/src/app/movies/components/movies-list/components/movie-card/movie-card.component.html
+++ b/src/app/movies/components/movies-list/components/movie-card/movie-card.component.html
@@ -3,7 +3,7 @@
     {{ movie.title }}
   </h3>
   <figure>
-    <img
+    <img class="object-cover"
       rel="preload"
       as="image"
       loading="lazy"
