--- a/src/app/movies/components/movies-list/movies-list.component.html
+++ b/src/app/movies/components/movies-list/movies-list.component.html
@@ -12,5 +12,7 @@
   </div>
 </section>
 
-<button class="add-movie rounded bg-blue-500"
-        (click)="goToCreateMovie()">+</button>
+<button class="add-movie rounded bg-blue-600 hover:bg-blue-500"
+        (click)="goToCreateMovie()">
+  <img src="assets/images/icon-plus.svg" alt="create movie" />
+</button>
