--- a/src/app/movies/components/movies-list/movies-list.component.scss
+++ b/src/app/movies/components/movies-list/movies-list.component.scss
@@ -30,9 +30,16 @@
   font-size: 2rem;
   font-weight: 800;
   border-radius: 25px;
-  color: #ffffff;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border: 2px solid #000000;
 
   &:focus {
     outline: none;
+  }
+
+  img {
+    width: 1.5rem;
   }
 }
