--- a/src/app/movies/components/movies-list/movies-list.component.html
+++ b/src/app/movies/components/movies-list/movies-list.component.html
@@ -12,7 +12,7 @@
   </div>
 </section>
 
-<button class="add-movie rounded bg-blue-600 hover:bg-blue-500"
+<button class="add-movie rounded bg-yellow-300 hover:bg-yellow-200"
         (click)="goToCreateMovie()">
   <img src="assets/images/icon-plus.svg" alt="create movie" />
 </button>
