--- a/src/styles.scss
+++ b/src/styles.scss
@@ -2,5 +2,6 @@
 @import 'tailwindcss/components';
 @import 'tailwindcss/utilities';
 @import '~@ng-select/ng-select/themes/default.theme.css';
+@import '~ngx-toastr/toastr';
 
 @import './styles/main';
