- feat (manage-movie.component): Added functionality for create movie in the database.

--- a/src/app/movies/components/detail-movie/detail-movie.component.html
+++ b/src/app/movies/components/detail-movie/detail-movie.component.html
@@ -3,7 +3,7 @@
 <!-- End delete movie modal -->
 
 <div class="detail-movie-container flex flex-col justify-start
-            items-center mx-auto relative">
+            items-center mx-auto relative w-1/8 md:w-1/7 lg:w-1/3">
   <div class="detail-movie-container__image w-full">
     <img class="object-cover"
          rel="preload"
