--- a/src/app/movies/components/movies-list/components/movie-card/movie-card.component.scss
+++ b/src/app/movies/components/movies-list/components/movie-card/movie-card.component.scss
@@ -3,6 +3,7 @@
   border: 5px solid transparent;
   box-shadow: 2px 2px 6px 0px rgba(0, 0, 0, 0.3);
   max-width: 380px;
+  min-height: 390px;
   transition: all 0.6s;
   border-radius: 0.5rem;
   cursor: pointer;
