--- a/src/app/movies/components/movies-list/components/movie-card/movie-card.component.scss
+++ b/src/app/movies/components/movies-list/components/movie-card/movie-card.component.scss
@@ -1,12 +1,19 @@
 .card {
   margin: 5px;
   border: 5px solid transparent;
-  box-shadow: 2px 2px 6px 0px rgba(0, 0, 0, 0.3);
+  box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+  transition: all 0.3s cubic-bezier(.25,.8,.25,1);
+  //box-shadow: 2px 2px 6px 0px rgba(0, 0, 0, 0.3);
   max-width: 380px;
   min-height: 390px;
-  transition: all 0.6s;
+  //transition: all 0.6s;
   border-radius: 0.5rem;
   cursor: pointer;
+  background-color: #ffffff;
+
+  &:hover {
+    box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
+  }
 
   &__title {
     width: 280px;
@@ -21,13 +28,13 @@
     img {
       width: 100%;
       height: 100%;
-      opacity: 0.5;
-      transition: opacity 0.5s;
+      //opacity: 0.5;
+      //transition: opacity 0.5s;
       border-radius: 0.2rem;
 
-      &:hover {
-        opacity: 1;
-      }
+      //&:hover {
+      //  opacity: 1;
+      //}
     }
   }
 
